[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Resources/Stats.gd" type="Script" id=2]
[ext_resource path="res://src/Sprites/Commando/Commando.png" type="Texture" id=3]
[ext_resource path="res://src/Weapons/BaseWeapon.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 5.5 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 17
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="BaseWeapon" parent="." instance=ExtResource( 5 )]

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="StairsCancel" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Stats" type="Node" parent="."]
script = ExtResource( 2 )
base_speed = 300.0
base_accel = 2000.0
base_jump_force = 200.0
base_max_jumps = 1
base_gravity = 800.0
base_fire_rate = 0.8
base_stairs_speed = 100.0
base_shooting_speed = 100.0
base_shoot_damage = 22.0

[connection signal="timeout" from="JumpBuffer" to="." method="_on_JumpBuffer_timeout"]
